--- a/_config.yml
+++ b/_config.yml
@@ -24,19 +24,20 @@ logo-dark: "/assets/img/branding/MVM-logo-full-dark.svg"
 highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code highlighter if needed
 
 # Author settings
-author: Armando Maynez # add your name
+author: 小川　樹 # add your name
 author-pic: Myself_Neon_grey.jpg
-about-author: Engineer, industry executive, research enthusiast. Avid learner with diverse interests in coding, machine learning, artificial intelligence and reinforcement learning. 17+ years of experience working in multinational corporations.
+about-author: はり師、きゅう師、あん摩マッサージ指圧師
+東洋医学のことなど綴っていきます。
 
 # Contact links
-email: armando.maynez@gmail.com # Add your Email address
+email: info@kmk-acu.com # Add your Email address
 phone: # Add your Phone number
-website: https://amaynez.github.io # Add your website
-linkedin: amaynez # Add your Linkedin handle
-github: amaynez # Add your Github handle
-twitter: '@MvmThe' # Add your Twitter handle
-bandcamp: armandomaynez # Add your Bandcamp username
-stackoverflow: stackoverflow # Add your stackoverflow account
+website: https://kmk.github.io # Add your website
+linkedin:  # Add your Linkedin handle
+github:  # Add your Github handle
+twitter: '@' # Add your Twitter handle
+bandcamp:  # Add your Bandcamp username
+stackoverflow:  # Add your stackoverflow account
 
 # Newsletter
 mailchimp: "https://github.us1.list-manage.com/subscribe/post?u=8ece198b3eb260e6838461a60&amp;id=397d90b5f4"
