--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,7 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 # Author settings
 author: 小川　樹 # add your name
 author-pic: Myself_Neon_grey.jpg
-about-author: |
-はり師、きゅう師、あん摩マッサージ指圧師。
-東洋医学のことなど綴っていきます。
-鍼灸院情報　[はりきゅうサロンくるみの樹](https://www.shinq-compass.jp/salon/detail/36130)
+about-author: はり師、きゅう師、あん摩マッサージ指圧師。東洋医学のことなど綴っていきます。鍼灸院情報　[はりきゅうサロンくるみの樹](https://www.shinq-compass.jp/salon/detail/36130)
 
 # Contact links
 email: info@kmk-acu.com # Add your Email address
