--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 
 # Author settings
 author: 小川　樹 # add your name
-author-pic: Myself_Neon_grey.jpg
+author-pic: me.jpg
 about-author: はり師、きゅう師、あん摩マッサージ指圧師。東洋医学のことなど綴っていきます。はりきゅうサロンくるみの樹 "https://www.shinq-compass.jp/salon/detail/36130"を経営。
 
 # Contact links
