--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ about-author: はり師、きゅう師、あん摩マッサージ指圧師。東
 # Contact links
 email: info@kmk-acu.com # Add your Email address
 phone: # Add your Phone number
-website: https://photo.kmk-acu.com # Add your website
+website: https://journal.kmk-acu.com # Add your website
 linkedin:  # Add your Linkedin handle
 github:  # Add your Github handle
 twitter: '@' # Add your Twitter handle
