--- a/_config.yml
+++ b/_config.yml
@@ -26,15 +26,15 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 # Author settings
 author: 小川　樹 # add your name
 author-pic: me.jpg
-about-author: はり師、きゅう師、あん摩マッサージ指圧師。東洋医学のことなど綴っていきます。はりきゅうサロンくるみの樹 https://www.shinq-compass.jp/salon/detail/36130 を経営。
+about-author: はり師、きゅう師、あん摩マッサージ指圧師。</ br>東洋医学のことなど綴っていきます。</ br><a href="https://www.shinq-compass.jp/salon/detail/36130">はりきゅうサロンくるみの樹</a>を経営。
 
 # Contact links
 email: info@kmk-acu.com # Add your Email address
-phone: # Add your Phone number
+phone: 080-6918-7341 # Add your Phone number
 website: https://journal.kmk-acu.com # Add your website
 linkedin:  # Add your Linkedin handle
 github:  # Add your Github handle
-twitter: '@' # Add your Twitter handle
+twitter:  # Add your Twitter handle
 bandcamp:  # Add your Bandcamp username
 stackoverflow:  # Add your stackoverflow account
 
